feat(brew): add gnu-getopt

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -38,6 +38,7 @@
        brew 'moreutils' if OS.mac?
        brew 'findutils' if OS.mac?
        brew 'gawk' if OS.mac?
+       brwe 'gnu-getopt' if OS.mac?
      #+END_SRC
     
 **** 增强工具
