--- a/hammers/scripts/tools.org
+++ b/hammers/scripts/tools.org
@@ -121,3 +121,85 @@
       done
     #+END_SRC
 
+*** merge video audio subtitle into mp4
+    #+BEGIN_SRC shell :eval never :exports code :tangle (or (and (or (eq m/os 'macos) (eq m/os 'liunx)) (m/resolve "${m/home.d}/.local/bin/vmerge")) "no") :tangle-mode (identity #o755) :noweb yes
+      #!/bin/bash
+      FILEPATH=$(realpath $(dirname $0))
+      echo "fullcmd: $0 $@"
+      export PATH="/usr/local/opt/gnu-getopt/bin:$PATH"
+      PROJECT_PATH=$(realpath "${FILEPATH}/..")
+      GETOPT_ARGS=`getopt -o:s:dh -l debug,help, -- "$@"`
+      eval set -- "$GETOPT_ARGS"
+
+      usage() {
+          >&2 echo "Usage: $0 -h|--help -d|--debug /path/to/dir /path/to/output"
+      }
+
+      while [ -n "$1" ]
+      do
+          case "$1" in
+              -d|--debug)
+                  set -x;
+                  debug=1;
+                  shift;
+                  ;;
+              -h|--help)
+                  usage;
+                  exit 0;
+                  ;;
+              --)
+                  shift;
+                  break;
+                  ;;
+          esac
+      done
+
+      if [ "$#" -ne 2 ]; then
+          >&2 echo "Please specify the /path/to/input /path/to/output"
+          usage
+          exit 1
+      fi
+      input_dir=$(realpath -e $1)
+      output_dir=$(realpath $2)
+
+      if [ ${input_dir} = ${output_dir} ]; then
+          >&2 echo "input_dir: ${input_dir} same as output_dir: ${output_dir}"
+          exit 1;
+      fi
+
+
+      if ! [ -d "${input_dir}" ]; then
+          >&2 echo "${input_dir} not exists"
+          exit 1;
+      fi
+
+      if [ -z "${output_dir}" ]; then
+          >&2 echo "output_dir can not be empty"
+          exit 1
+      fi
+
+      if ! [ -d "${output_dir}" ]; then
+          >&2 echo "${output_dir} as output_dir not exists, create a new one"
+          mkdir -p ${output_dir}
+      fi
+
+      script=$(mktemp)
+
+      pushd ${input_dir} > /dev/null
+      ls \
+          | sed -E 's/\.(mp4|m4a|ass)$//' \
+          | sort \
+          | uniq -c -d \
+          | sed -E 's/^\s*//;s/([0-9]+) (.*)/\1|\2/' \
+          | awk -F'|' -v output_dir=${output_dir} '
+                $1==3 {
+                    valid=system(sprintf("test -s \"%s.ass\"", $2));
+                    if(valid == 0) {
+                        printf "ffmpeg -y -loglevel error -i \"%s.mp4\" -i \"%s.m4a\" -i \"%s.ass\" -c:v copy -c:a copy -c:s mov_text -map 0:v -map 1:a -map 2:s -metadata:s:s:0 language=eng -disposition:s:0 default \"%s/%s.mp4\"\n", $2, $2, $2, output_dir, $2
+                    } else {
+                        printf "ffmpeg -y -loglevel error -i \"%s.mp4\" -i \"%s.m4a\" -c:v copy -c:a copy -map 0:v -map 1:a \"%s/%s.mp4\"\n", $2, $2, output_dir, $2
+                    }
+                }' > ${script}
+      bash -x ${script}
+      popd
+    #+END_SRC
