fix: enable native compile

--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -13,6 +13,7 @@
      (setenv "LIBRARY_PATH" "")
      (setenv "LD_LIBRARY_PATH" "")
      (setq native-comp-driver-options "")
+     (setq package-native-compile t)
    #+END_SRC
 ** 使用代理进行访问
    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
